--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,229 +1,257 @@
 :root {
-    --background-body-color: black;
-    --font-color:black;
-    --border-color:white;
-    --box-color:rgba(39, 35, 35, 0.986);
-    --img-background:black;
-    --box-shadow:wheat;
-    --author-color:rgb(43, 173, 216);
-    --border-line-color:white;
+  --primary-color: rgb(250, 250, 250);
+  --secondary-color: rgb(233, 233, 233);
+  --font-color: #22292f;
+  --cart-color: #dcdcdc;
+  --heading-color: #000000;
+}
+
+[data-theme="dark"] {
+  --primary-color: #161625;
+  --secondary-color: #323a4e;
+  --font-color: #e1e1ff;
+  --cart-color: #161625;
+  --heading-color: #818cab;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 20px 0;
+}
+
+/*slider switch css */
+.theme-switch-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.theme-switch-wrapper em {
+  margin-left: 10px;
+  font-size: 1rem;
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #66bb6a;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+          transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background-color: var(--primary-color);
+  font-family: "Roboto", sans-serif;
+  color: var(--font-color);
+}
+
+.container {
+  margin: 5vh;
+}
+
+#main-title {
+  padding: 10px;
+  margin: 2% 20%;
+  text-align: center;
+  font-size: medium;
+  color: var(--heading-color);
+  border: 1px solid var(--heading-color);
+}
+
+#search {
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%;
+  height: 5vh;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  color: var(--heading-color);
+  background-color: var(--primary-color);
+  border-bottom-color: var(--heading-color);
+}
+
+#news-container {
+  margin: 4%;
+  border-radius: 10px;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+}
+
+#news-container:hover,
+#news-container:focus,
+#news-container:active {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+#news-articles {
+  list-style-type: none;
+  margin: 2%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25% 25% 25% auto;
+      grid-template-columns: 25% 25% 25% auto;
+  background-color: var(--secondary-color);
+}
+
+.article {
+  margin: 5%;
+  background-color: var(--cart-color);
+  border-radius: 10px;
+}
+
+.article-img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.article-title {
+  padding: 1vh;
+}
+
+.article-description {
+  padding: 1vh;
+}
+
+.article-author {
+  display: block;
+  margin: 1vh;
+}
+
+.article-link {
+  text-decoration: none;
+  text-align: center;
+  color: rgba(67, 67, 173, 0.842);
+  display: block;
+  text-align: right;
+  margin: 1vh;
+}
+
+.not-found {
+  color: red;
+  padding: 10px;
+}
+
+.loader {
+  position: absolute;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
   }
-  body{
-      background-color: black;
+  100% {
+    -webkit-transform: rotate(360deg);
   }
-  
-  .site-title {
-    color: white;
-    font-size: 31px;
-    font-family: 'Trebuchet MS';
-    border: white 5px solid;
-    margin-left: 40%;
-    padding: 10px;
-    padding-left: 23px;
-    padding-right: 23px;
-    display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
-  
-  .search-bar {
-    margin-top: 4%;
-    margin-left: 5%;
-    margin-bottom: 70px;
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
-  
-  #search {
-    width: 92%;
-    height: 30px;
-    background-color: black;
-    font-size: large;
-    padding: 20px;
-    font-size: 30px;
-    color: white;
-    border-top: black;
-    border-left: black;
-    border-right: black;
-  }
-  
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
   #news-articles {
-    margin-left: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
   }
-  
-  .container {
-    max-width: 265px;
-    border: white 5px solid;
-    height: 480px;
-    padding: 35px;
-    margin-left: 9px;
-    background-color:black;
-    margin-bottom: 20px;
-    border-radius: 18px;
-    padding-right: 30px;
+  .loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #3498db;
+    width: 50px;
+    height: 50px;
   }
-  
-  .article {
-    list-style-type: none;
-    display: inline;
-  }
-  
-  .container:hover {
-    -webkit-transform: scale(1.03);
-            transform: scale(1.03);
-    -webkit-box-shadow: 0 0 5px blue;
-            box-shadow: 0 0 5px blue;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-  
-  .img_area {
-    width: 265px;
-    height: 250px;
-    background-color:white;
-  }
-  
-  .article-img {
-    margin-top: 20px;
-    width: 265px;
-    height: 205px;
-  }
-  
-  .article-title {
-    background: none;
-    font-family: sans-serif;
-    overflow: hidden;
-    margin-top: 15px;
+}
 
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  #news-articles {
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
   }
-  
-  .article-description {
-    font-size: 20px;
-    color: white;
-    background: none;
-    overflow: hidden;
-    margin-top: 15px;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    font-family: sans-serif;
-  }
-  
-  .article-author {
-    background: none;
-    font-size: 20px;
-    font-family: Trebuchet MS;
-    color: blue ;
-    display: block;
-    text-align: right;
-    
-  }
-  
-  .article-link {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .not-found {
-    color:white;
-    font-family: sans-serif;
-    font-size: 35px;
-    margin-left: 25px;
-    list-style-type: none;
-  }
-  
-  .load {
-    color: white;
-    font-family: sans-serif;
-    font-size: 35px;
-    margin-left: 25px;
-  }
- 
-  
-
-  @media only screen and (max-width: 600px) {
-    .site-title {
-      color: white;
-      font-size: 25px;
-      font-family: 'Trebuchet MS';
-      border: white 1px solid;
-      margin-left: 10%;
-      margin-top: 4%;
-      padding: 10px;
-      padding-left: 23px;
-      padding-right: 23px;
-      display: inline-block;
-    }
-    
-    .search-bar {
-      width: 580px;
-      margin: 0px;
-      padding: 0px;
-    }
-    #search {
-      width: 55%;
-      height: 20px;
-      background-color: black;
-      margin-left: 2%;
-      padding: 20px;
-      font-size: 20px;
-      color: white;
-      border-top: black;
-      border-left: black;
-      border-right: black;
-    }
-    .container {
-      max-width: 240px;
-      border: white 5px solid;
-      height: 550px;
-      padding: 35px;
-      background-color: black;
-      margin-bottom: 20px;
-      border-radius: 18px;
-      padding-right: 30px;
-      margin-left: -18px;
-      margin-top: 10px;
-    }
-    #news-articles {
-      margin-left: 2px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-    }
-    .not-found {
-      color: white;
-      font-family: sans-serif;
-      font-size: 25px;
-      margin-left: -20px;
-      list-style-type: none;
-    }
-    .load {
-      color: white;
-      font-family: sans-serif;
-      font-size: 25px;
-      margin-left: 25px;
-    }
-    .article {
-      list-style-type: none;
-      display: inline-block;
-      margin-left: -14px;
-    }
-    .img_area {
-      width: 265px;
-      height: 250px;
-      background-color: white;
-    }
-    .article-img {
-      margin-top: 20px;
-      width: 265px;
-      height: 205px;
-    }
-  }
+}
+/*# sourceMappingURL=index.css.map */
