--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
+
 :root {
   --background-body-color: black;
-  --font-color:black;
+  --font-color:white;
   --border-color:white;
   --box-color:rgba(39, 35, 35, 0.986);
   --img-background:black;
@@ -8,148 +9,131 @@
   --author-color:rgb(43, 173, 216);
   --border-line-color:white;
 }
+
+
 body{
-    background-color: black;
+  background-color: black;
 }
 
-.site-title {
-  color: white;
+.site-title{
+  color:white;
   font-size: 31px;
   font-family: 'Trebuchet MS';
-  border: white 5px solid;
+  border:white 1px solid;
   margin-left: 40%;
   padding: 10px;
   padding-left: 23px;
   padding-right: 23px;
   display: inline-block;
-}
-
-.search-bar {
-  margin-top: 4%;
-  margin-left: 5%;
-  margin-bottom: 70px;
-}
-
-#search {
-  width: 92%;
-  height: 30px;
-  background-color: black;
-  font-size: large;
-  padding: 20px;
-  font-size: 30px;
-  color: white;
-  border-top: black;
-  border-left: black;
-  border-right: black;
-}
-
-#news-articles {
-  margin-left: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.container {
-  max-width: 265px;
-  border: white 5px solid;
-  height: 480px;
-  padding: 35px;
-  margin-left: 9px;
-  background-color:black;
-  margin-bottom: 20px;
-  border-radius: 18px;
-  padding-right: 30px;
-}
-
-.article {
-  list-style-type: none;
-  display: inline;
-}
-
-.container:hover {
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-  -webkit-box-shadow: 0 0 5px blue;
-          box-shadow: 0 0 5px blue;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.img_area {
-  width: 265px;
-  height: 250px;
-  background-color:white;
-}
-
-.article-img {
-  margin-top: 20px;
-  width: 265px;
-  height: 205px;
-}
-
-.article-title {
-  background: none;
-  font-family: sans-serif;
-  overflow: hidden;
-  margin-top: 15px;
-
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-
-.article-description {
-  font-size: 20px;
-  color: white;
-  background: none;
-  overflow: hidden;
-  margin-top: 15px;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  font-family: sans-serif;
-}
-
-.article-author {
-  background: none;
-  font-size: 20px;
-  font-family: Trebuchet MS;
-  color: blue ;
-  display: block;
-  text-align: right;
+  }
   
-}
+  .search-bar{
+      margin-top: 4%;
+      margin-left: 5%;
+      margin-bottom: 70px;
+      
+      
+  }
+  #search{
+      width: 92%;
+      height: 30px;
+      background-color:black;
+      font-size: large;
+      padding :20px;
+      font-size: 30px;
+      color:white;
+      border-top: black;
+      border-left: black;
+      border-right: black;
+      
+  }
 
-.article-link {
-  color: white;
-  text-decoration: none;
-}
+  #news-articles{
+    margin-left: 20px;    
+    display: flex;
+    flex-wrap: wrap;  
+  }
+  .container{
+    max-width: 265px;
+    border: black 10px solid;
+    height:530px;
+    padding:35px;
+    margin-left: 9px;
+    background-color:black;
+    margin-bottom: 20px;
+    border-radius: 18px;
+    padding-right: 30px;
+  }
+  .article{
+    list-style-type: none;
+    display: inline;
+ }
+ .container:hover{
+  transform: scale(1.03);
+  box-shadow: 0 0 5px blueviolet;
+  transition: all 0.3s;
+ }
 
-.not-found {
-  color:white;
-  font-family: sans-serif;
-  font-size: 35px;
-  margin-left: 25px;
-  list-style-type: none;
-}
-
-.load {
-  color: white;
-  font-family: sans-serif;
-  font-size: 35px;
-  margin-left: 25px;
-}
-
-
-
+  .img_area{
+    width:265px;
+    height:250px;
+    background-color:white;
+  }
+  .article-img{
+    margin-top: 20px;
+    width:265px;
+    height:205px;
+  }
+ .article-title{
+    background: none;
+    font-family: sans-serif;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
+  }
+  .article-description{
+    font-size: 25px;
+    color:white;
+    background: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
+    font-family: sans-serif;
+  }
+  .article-author{
+    background: none;
+    font-size: 25px;
+    font-family: Trebuchet MS;
+    color:blue;
+    display: block;
+    text-align: right;
+  }
+  .article-link{
+    color:white;
+    text-decoration: none;
+  }
+  .not-found{
+    color:white;
+    font-family: sans-serif;
+    font-size: 35px;
+    margin-left: 25px;
+    list-style-type: none;
+  }
+  .load{
+   color:white;
+   font-family: sans-serif;
+   font-size: 35px;
+   margin-left: 25px;
+ }
+   
 @media only screen and (max-width: 600px) {
-  .site-title {
-    color: white;
+
+  .site-title{
+    color:white;
     font-size: 25px;
     font-family: 'Trebuchet MS';
     border: white 1px solid;
@@ -159,71 +143,69 @@ body{
     padding-left: 23px;
     padding-right: 23px;
     display: inline-block;
+    }
+    
+    .search-bar{
+      width: 580px;
+      margin: 0px;
+      padding: 0px;
+    }
+    #search{
+      width: 55%;
+      height: 20px;
+      background-color:black;
+      margin-left: 2%;
+      padding :20px;
+      font-size: 20px;
+      color:white;
+      border-top: black;
+      border-left: black;
+      border-right: black;
+      
   }
-  
-  .search-bar {
-    width: 580px;
-    margin: 0px;
-    padding: 0px;
-  }
-  #search {
-    width: 55%;
-    height: 20px;
-    background-color: black;
-    margin-left: 2%;
-    padding: 20px;
-    font-size: 20px;
-    color: white;
-    border-top: black;
-    border-left: black;
-    border-right: black;
-  }
-  .container {
+  .container{
     max-width: 240px;
-    border: white 5px solid;
-    height: 550px;
-    padding: 35px;
-    background-color: black;
+    border: black 10px solid;
+    height:550px;
+    padding:35px;
+    background-color:black;
     margin-bottom: 20px;
     border-radius: 18px;
     padding-right: 30px;
     margin-left: -18px;
     margin-top: 10px;
   }
-  #news-articles {
-    margin-left: 2px;
-    display: -webkit-box;
-    display: -ms-flexbox;
+  #news-articles{
+    margin-left: 2px;    
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;  
   }
-  .not-found {
-    color: white;
+  .not-found{
+    color:white;
     font-family: sans-serif;
     font-size: 25px;
     margin-left: -20px;
     list-style-type: none;
   }
-  .load {
-    color: white;
-    font-family: sans-serif;
-    font-size: 25px;
-    margin-left: 25px;
-  }
-  .article {
-    list-style-type: none;
-    display: inline-block;
-    margin-left: -14px;
-  }
-  .img_area {
-    width: 265px;
-    height: 250px;
-    background-color: white;
-  }
-  .article-img {
-    margin-top: 20px;
-    width: 265px;
-    height: 205px;
-  }
+  .load{
+   color:white;
+   font-family: sans-serif;
+   font-size: 25px;
+   margin-left: 25px;
+ }
+ .article{
+  list-style-type: none;
+  display: inline-block;
+  margin-left: -14px;
+}
+ .img_area{
+  width:265px;
+  height:250px;
+  background-color:white;
+}
+.article-img{
+  margin-top: 20px;
+  width:265px;
+  height:205px;
+}
 }
