--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -93,6 +93,20 @@ body{
     -webkit-line-clamp: 3; 
     -webkit-box-orient: vertical;
   }
+  h2{
+    color: white;
+ 
+  }
+
+  span{
+    background-color: black;
+  }
+   img{
+     background-color: white;
+   }
+    li{
+      background-color: black;
+    }
   .article-description{
     font-size: 25px;
     color:white;
