--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -103,7 +103,20 @@ body{
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+ h2{
+   color: white;
 
+ }
+
+  span{
+    background-color: black;
+  }
+   img{
+     background-color: white;
+   }
+    li{
+      background-color: black;
+    }
 .article-description {
   font-size: 20px;
   color: white;
