--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -137,6 +137,18 @@ body{
     margin-left: 25px;
     list-style-type: none;
   }
+
+  .loader {
+    position: absolute;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
   .load{
    color:white;
    font-family: sans-serif;
@@ -157,6 +169,13 @@ body{
     padding-left: 23px;
     padding-right: 23px;
     display: inline-block;
+    }
+
+    .loader {
+      border: 10px solid #f3f3f3;
+      border-top: 10px solid #3498db;
+      width: 50px;
+      height: 50px;
     }
     
     .search-bar{
