--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-//********** Variable declaration **************
+
 :root {
   --primary-color: rgb(250, 250, 250);
   --secondary-color: rgb(233, 233, 233);
@@ -15,16 +15,14 @@
   --heading-color: #818cab;
 }
 
-//*******************************
-
-//******************* slider *********************
+//slider 
 nav {
   display: flex;
   justify-content: flex-end;
   padding: 20px 0;
 }
 
-/*slider switch css */
+//slider switch css 
 .theme-switch-wrapper {
   display: flex;
   align-items: center;
@@ -83,7 +81,7 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-//******************************
+
 
 * {
   margin: 0;
@@ -171,7 +169,7 @@ body {
   color: red;
   padding: 10px;
 }
-//**************** loader ***************************
+//loader 
 .loader {
   position: absolute;
   border: 16px solid #f3f3f3;
@@ -179,7 +177,7 @@ body {
   border-top: 16px solid #3498db;
   width: 120px;
   height: 120px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
+  -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
 }
 
@@ -200,8 +198,7 @@ body {
     transform: rotate(360deg);
   }
 }
-
-/* Extra small devices (phones, 600px and down) */
+//  Extra small devices (phones, 600px and down) 
 @media only screen and (max-width: 600px) {
   #news-articles {
     grid-template-columns: 100%;
@@ -213,7 +210,7 @@ body {
     height: 50px;
   }
 }
-/* Small devices (portrait tablets and large phones, 600px and up) */
+// Small devices (portrait tablets and large phones, 600px and up) 
 @media only screen and (min-width: 600px) and (max-width: 900px) {
   #news-articles {
     grid-template-columns: 50% 50%;
